# GOS_cpp_chat_server_client

./: CMakeLists.txt  LICENSE  README.md  main.cpp
apps/: CMakeLists.txt  app.cpp  chat_client.cpp  chat_server.cpp  chat_server_native.cpp
include/chat_server/: chat_client.h  chat_message.h  chat_participant.h  chat_room.h  chat_server.h  chat_session.h
proto/: CMakeLists.txt  chat_history.proto  message.proto
src/: CMakeLists.txt  chat_client.cpp  chat_client.h  chat_message.cpp  chat_message.h  chat_participant.h  chat_printer.cpp  chat_printer.h  chat_room.h  chat_server.cpp  chat_server.h  chat_session.h  lib.cpp  lib.h  timer.h
